# autochem

./: .buildinfo  .pre-commit-config.yaml  .pylintrc  README.md  genindex.html  index.html  lefthook.yml  lint.sh  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yaml  lint.yaml  test.yaml
autochem/: __init__.py
autochem/rate/: _00func.py  _01const.py  _02rate.py  __init__.py  _reaction.py  blend.py  data.py
autochem/tests/: test__rate.py  test__therm.py
autochem/therm/: _00therm.py  _00thermo.py  _01species.py  __init__.py  _species.py  data.py  func.py
autochem/unit_/: __init__.py  _manager.py  _unit.py  const.py  dim.py  system.py
autochem/util/: __init__.py  chemkin.py  form.py  mess.py  pac99.py  plot.py  type_.py
automol/: __init__.py  const.py  form.html  inchi_key.html  util.html  vmat.py
automol/amchi/: _conv.py
automol/embed/: _cleanup.py
automol/form/: __init__.py  _form.py
automol/geom/: _1conv.py  _2vib.py  __init__.py
automol/geom/base/: _0core.py  _2intmol.py  __init__.py
automol/graph/: _1rmg.py  _2conv.py  _3super_func_group.py  __init__.py
automol/graph/base/: _00core.py  _01networkx.py  _02algo.py  _03kekule.py  _05stereo.py  _06heur.py  _07geom.py  _08canon.py  _11stereo.py  _12rdkit.py  __init__.py  _func_group.py  enum.py  ts.py
automol/prop/: freq.py
automol/reac/: _0core.py  _2stereo.py  _3find.py  _4struc.py  _5conv.py  __init__.py  enum.py
automol/smarts/: __init__.py  _core.py  rd.py
automol/smiles/: __init__.py
automol/tests/: test_amchi.py  test_graph.py  test_graph_enum.py  test_graph_ts.py  test_reac.py  test_reac_enum.py  test_rings.py  test_super_func_group.py
automol/util/: vector.py
automol/zmat/: _ring.py
automol/zmat/base/: _core.py
autoreact/: __init__.py  test__params.py
autoreact/ktp_xarray/: __init__.py  xarray_wrappers.py  xarray_wrappers_test.py
autoreact/params/: __init__.py  _params.py
