[project]
name = "autochem"
version = "2025.7.21"
description = "Cheminformatics libraries used by the AutoMech project"
readme = "README.md"
authors = [
    { name = "Andreas Copan", email = "avcopan@gmail.com" }
]
requires-python = ">= 3.11"
dependencies = [
    "altair",
    "ipython>=8.15",
    "more-itertools",
    "networkx>=3.3",
    "numpy>=1.26",
    "pint",
    "py3dmol",
    "pyparsing",
    "pyyaml",
    "qcelemental",
    "rdkit",
    "scipy>=1.12",
    "xarray>=2023.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["autochem", "automol", "autoreact", "phydat", "molsym"]

[tool.hatch.build.targets.wheel]
include = ["autochem", "automol", "autoreact", "phydat", "molsym"]

[dependency-groups]
dev = [
    "black",
    "jupyter",
    "mypy",
    "myst-parser",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-xdist[psutil]",
    "ruff",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-book-theme",
]
