[project]
name = "autochem"
version = "2025.7.21"
description = "Cheminformatics libraries used by the AutoMech project"
readme = "README.md"
authors = [
    { name = "Andreas Copan", email = "avcopan@gmail.com" }
]
requires-python = ">= 3.11"
dependencies = [
    "altair",
    "ipython>=8.15",
    "more-itertools",
    "networkx>=3.3",
    "numpy>=1.26",
    "pint",
    "py3dmol",
    "pyparsing",
    "pyyaml",
    "qcelemental",
    "rdkit",
    "scipy>=1.12",
    "xarray>=2023.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["autochem", "automol", "autoreact", "phydat", "molsym"]

[tool.hatch.build.targets.wheel]
include = ["autochem", "automol", "autoreact", "phydat", "molsym"]

[dependency-groups]
dev = [
    "jupyter",
    "lefthook",
    "mypy",
    "myst-parser",
    "pylint",
    "pytest",
    "pytest-xdist[psutil]",
    "ruff",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-book-theme",
]

# Ruff configurations
[tool.ruff]
target-version = "py311"
exclude = ["automol", "autoreact", "molsym", "phydat", "tests", "docs"]
output-format = "concise"
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # missing trailing comma (handled by format)
    "RUF022",   # `__all__` is not sorted
    "PLR2004",  # magic value in comparison
    "S101",     # assert statement (may want to remove this eventually)
    "TID252",   # relative import
    # resolve rule conflicts:
    "D203",     # incorrect blank line before class (uses D211 instead)
    "D213",     # multi-line summary second line (uses D212 instead)
]
